--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ yansi = "1.0.1"
 
 [dev-dependencies]
 assert_cmd = { version = "2.1.1", features = ["color"] }
+assert_fs = { version = "1.1.3", features = ["color"] }
 predicates = "3.1.3"
