--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,26 @@
 name = "rc"
 version = "0.1.0"
 edition = "2024"
+authors = ["Sergey Lyskov"]
+description = "Command line tool to run various biomolecular structural prediction, analysis and design applications"
+
+[features]
+test-docker = []
 
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["derive"] }
 strum = { version = "0.27.2", features = ["derive"] }
+users = "0.11.0"
 yansi = "1.0.1"
 
 [dev-dependencies]
 assert_cmd = { version = "2.1.1", features = ["color"] }
 assert_fs = { version = "1.1.3", features = ["color"] }
 predicates = "3.1.3"
+
+
+[[test]]
+name = "test-docker"
+path = "tests/docker.rs"
+required-features = ["test-docker"]
