--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ test-docker = []
 anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["derive"] }
 strum = { version = "0.27.2", features = ["derive"] }
-users = "0.11.0"
 yansi = "1.0.1"
+
+[target.'cfg(unix)'.dependencies]
+users = "0.11.0"
 
 [dev-dependencies]
 assert_cmd = { version = "2.1.1", features = ["color"] }
