--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -191,7 +191,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install LLVM and Clang
-        run: sudo apt-get update && sudo apt-get install -y llvm clang
+        run: sudo apt-get update && sudo apt-get install -y llvm clang lld
 
       - name: Install Rust
         run: |
@@ -199,6 +199,15 @@ jobs:
           export PATH="$HOME/.cargo/bin:$PATH"
           rustup default stable
           rustup target add aarch64-pc-windows-gnullvm
+
+      - name: Configure Cargo linker
+        run: |
+          mkdir -p .cargo
+          cat > .cargo/config.toml << 'EOF'
+          [target.aarch64-pc-windows-gnullvm]
+          linker = "clang"
+          rustflags = ["-C", "link-arg=-fuse-ld=lld", "-C", "link-arg=--target=aarch64-pc-windows-gnu"]
+          EOF
 
       - name: Build Rust Code
         run: cargo build --release --target aarch64-pc-windows-gnullvm
