--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -183,38 +183,38 @@ jobs:
           gh release upload "$RELEASE_VERSION" "${RELEASE_VERSION}-windows-x86.zip#$PROJECT_NAME-${RELEASE_VERSION}-windows-x86.zip" --clobber
 
   release-windows-arm:
-    runs-on: ubuntu-22.04-arm
+    runs-on: windows-2022
     needs: prepare-release
+
+    env:
+      RELEASE_VERSION: ${{ needs.prepare-release.outputs.release_version }}
+      PROJECT_NAME: ${{ needs.prepare-release.outputs.project_name }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install gcc-mingw-w64 for ARM64
-        run: |
-          sudo apt-get update
-          # Install MinGW for ARM64 (cross compiler)
-          sudo apt-get install -y gcc-mingw-w64
-          # On some Ubuntu versions: sudo apt-get install -y g++-mingw-w64-aarch64
+      - name: Install Rust (stable)
+        uses: dtolnay/rust-toolchain@stable
 
-      - name: Install Rust
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          export PATH="$HOME/.cargo/bin:$PATH"
-          rustup default stable
-          rustup target add aarch64-pc-windows-gnu
+      - name: Add Windows ARM64 target
+        run: rustup target add aarch64-pc-windows-msvc
 
-      - name: Build Rust Code (Windows ARM64)
-        run: cargo build --release --target aarch64-pc-windows-gnu
+      - name: Build Rust code (Windows ARM64)
+        run: cargo build --release --target aarch64-pc-windows-msvc
 
       - name: Create Zip Archive
+        shell: pwsh
         run: |
-          zip -j "$RELEASE_VERSION-windows-arm64.zip" target/aarch64-pc-windows-gnu/release/$PROJECT_NAME.exe
+          $zipName = "$env:RELEASE_VERSION-windows-arm64.zip"
+          $exePath = "target\aarch64-pc-windows-msvc\release\$env:PROJECT_NAME.exe"
+          Compress-Archive -Path $exePath -DestinationPath $zipName -Force
 
       - name: Upload Release Artifact with gh
+        shell: pwsh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload "$RELEASE_VERSION" \
-            "${RELEASE_VERSION}-windows-arm64.zip#$PROJECT_NAME-${RELEASE_VERSION}-windows-arm64.zip" \
-            --clobber
+          $zipName = "$env:RELEASE_VERSION-windows-arm64.zip"
+          $label   = "$env:PROJECT_NAME-$env:RELEASE_VERSION-windows-arm64.zip"
+          gh release upload "$env:RELEASE_VERSION" "$zipName#$label" --clobber
