--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ test-docker = []
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["derive"] }
+shell-escape = "0.1.5"
 strum = { version = "0.27.2", features = ["derive"] }
 yansi = "1.0.1"
 
