--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         run: cargo test --verbose
 
   docker-tests:
-    runs-on: ubuntu-22.04-4core
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
