--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run Docker tests
         run: cargo test --verbose -F test-docker
+
+  docker-rfdiffusion-tests:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Docker tests
+        run: cargo test --verbose -F test-docker docker_rfdiffusion
