--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run Docker tests
-        run: cargo test --verbose -F test-docker
-
-  docker-rfdiffusion-tests:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run Docker tests
-        run: cargo test --verbose -F test-docker docker_rfdiffusion
+        run: cargo test --verbose -F test-docker -j2
