Add paste crate and refactor hpc tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ all = ["docker-tests", "hpc-tests"]
 anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["derive"] }
 home = "0.5.12"
+paste = "1.0.15"
 shell-escape = "0.1.5"
 strum = { version = "0.27.2", features = ["derive"] }
 yansi = "1.0.1"
