--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ assert_cmd = { version = "2.1.1", features = ["color"] }
 assert_fs = { version = "1.1.3", features = ["color"] }
 predicates = "3.1.3"
 reqwest = { version = "0.12.24", features = ["blocking"] }
+serial_test = "3.2.0"
 
 
 # [[test]]
