--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ description = "Command line tool to run various biomolecular structural predicti
 [features]
 docker-tests = []
 hpc-tests = []
-all = ["docker-tests", "hpc-tests"]
+high-memory-tests = []
+all = ["docker-tests", "hpc-tests", "high-memory-tests"]
 
 [dependencies]
 anyhow = "1.0.100"
@@ -28,7 +29,6 @@ assert_fs = { version = "1.1.3", features = ["color"] }
 predicates = "3.1.3"
 reqwest = { version = "0.12.24", features = ["blocking"] }
 serial_test = "3.2.0"
-
 
 # [[test]]
 # name = "docker-tests"
