--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,13 @@ all = ["docker-tests", "hpc-tests", "high-memory-tests"]
 
 [dependencies]
 anyhow = "1.0.100"
+blake3 = "1.8.2"
 clap = { version = "4.5.51", features = ["derive"] }
 home = "0.5.12"
 paste = "1.0.15"
 shell-escape = "0.1.5"
 strum = { version = "0.27.2", features = ["derive"] }
+which = "8.0.0"
 yansi = "1.0.1"
 
 [target.'cfg(unix)'.dependencies]
