--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run Docker tests
         run: cargo test --verbose -F docker-tests
-        # run: cargo test --verbose -F docker-tests -- --test-threads 1
+
+  native-tests:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Pixi
+        uses: prefix-dev/setup-pixi@v@v0.9.4
+      - name: Run Native tests
+        run: |
+          cargo test --verbose -F native-tests
