--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Pixi
-        uses: prefix-dev/setup-pixi@v@v0.9.4
+        uses: prefix-dev/setup-pixi@v0.9.4
       - name: Run Native tests
         run: |
           cargo test --verbose -F native-tests
