--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Pixi
         uses: prefix-dev/setup-pixi@v0.9.4
+        with:
+          pixi-version: v0.62.2
       - name: Run Native tests
         run: |
           cargo test --verbose -F native-tests
