--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Pixi
-        uses: prefix-dev/setup-pixi@v0.9.2
-        with:
-          pixi-version: v0.63.2
+
+      - name: Install Pixi
+        run: |
+          curl -fsSL https://pixi.sh/install.sh | bash
+          echo "$HOME/.pixi/bin" >> $GITHUB_PATH
+
       - name: Run Native tests
         run: |
           cargo test --verbose -F native-tests
