Run native tests with high-memory flag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Run Native tests
         run: |
-          cargo test --verbose -F native-tests
+          cargo test --verbose -F native-tests,high-memory-tests
