--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,19 @@ jobs:
       - name: Run tests
         run: cargo test --verbose
 
+  cargo-audit:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
+
+      - name: Run cargo audit
+        run: cargo audit
+
   docker-tests:
     runs-on: ubuntu-latest
     needs: build
