--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ which = "8.0.0"
 yansi = "1.0.1"
 
 [target.'cfg(unix)'.dependencies]
-users = "0.11.0"
+nix = { version ="0.31.1",default-features = false, features = ["user"] }
 
 [dev-dependencies]
 assert_cmd = { version = "2.1.1", features = ["color"] }
