--- a/assets/pixi/foundry.toml
+++ b/assets/pixi/foundry.toml
@@ -2,8 +2,9 @@
 name = "foundry"
 version = "0.0.1"
 description = "Pixi environment for https://github.com/RosettaCommons/foundry app"
-platforms = ["linux-64", "osx-64", "osx-arm64"]
-# channels = ["conda-forge"]
+#platforms = ["linux-64", "osx-64", "osx-arm64"]
+platforms = ["linux-64"]
+channels = ["conda-forge"]
 
 [dependencies]
 python = "3.12.*"
@@ -12,46 +13,53 @@ git = "*"
 uv = "*"
 
 [activation.env]
-FOUNDRY_VERSION = "v0.1.9""
+FOUNDRY_VERSION = "v0.1.9"
 FOUNDRY_DIR = "$PIXI_PROJECT_ROOT/foundry"
-FOUNDRY_CHECKPOINTS = "$PIXI_PROJECT_ROOT/foundry/checkpoints"
+FOUNDRY_CHECKPOINTS = "$FOUNDRY_DIR/weights"
 
 [tasks]
 setup = { depends-on = ["clone", "install", "download-models"] }
 
 [tasks.clone]
-cmd = """
+cmd = ["bash", "-lc", """
 if [ ! -d "$FOUNDRY_DIR" ]; then
   git clone https://github.com/RosettaCommons/foundry "$FOUNDRY_DIR"
 fi
 cd "$FOUNDRY_DIR" && git checkout $FOUNDRY_VERSION
-"""
+"""]
 
 [tasks.install]
 depends-on = ["clone"]
-cmd = """
+cmd = ["bash", "-lc", """
 cd "$FOUNDRY_DIR" && \
-uv venv --python 3.12 && \
-uv pip install ".[all]" && \
-.venv/bin/foundry --help
-"""
+pip install ".[all]" && \
+foundry --help
+"""]
 
 [tasks.download-models]
 depends-on = ["install"]
-cmd = """
+cmd = ["bash", "-lc", """
 cd "$FOUNDRY_DIR" && \
-.venv/bin/foundry install base-models --checkpoint-dir "$FOUNDRY_CHECKPOINTS"
-"""
+foundry install base-models --checkpoint-dir "$FOUNDRY_CHECKPOINTS"
+"""]
 
 [tasks.foundry]
 depends-on = ["install"]
 args = ["args"]
-cmd = """
+cmd = ["bash", "-lc", """
 cd "$FOUNDRY_DIR" && \
-.venv/bin/foundry {{args}}
-"""
+foundry {{args}}
+"""]
+
+[tasks.execute]
+# depends-on = ["install"]
+args = ["cmd"]
+cmd = ["bash", "-lc", """
+{{cmd}}
+"""]
+# cd "$FOUNDRY_DIR"
 
 [tasks.clean]
-cmd = """
+cmd = ["bash", "-lc", """
 rm -rf "$FOUNDRY_DIR"
-"""
+"""]
