--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build
-        run: cargo build --verbose
+        run: |
+          cargo install cargo-nextest --locked
+          cargo build --verbose
 
   tests:
     runs-on: ubuntu-latest
@@ -23,7 +25,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run tests
-        run: cargo test --verbose
+        run: |
+          cargo nextest --verbose
 
   cargo-audit:
     runs-on: ubuntu-latest
@@ -35,7 +38,6 @@ jobs:
       - name: Install cargo-audit
         run: |
           cargo install cargo-audit
-          cargo install cargo-nextest --locked
 
       - name: Run cargo audit
         run: cargo audit
@@ -47,7 +49,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run Docker tests
-        run: cargo test --verbose -F docker-tests
+        run: |
+          cargo nextest --verbose -F docker-tests
 
   native-tests:
     runs-on: ubuntu-latest
