--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,17 +17,26 @@ jobs:
         run: |
           cargo build --verbose
 
+  #
+  #
   tests:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - uses: actions/checkout@v4
-      - name: Run tests
+
+      - name: Build tests
         run: |
           cargo install cargo-nextest --locked
+          cargo test --no-run
+
+      - name: Run tests
+        run: |
           cargo nextest run
 
+  #
+  #
   cargo-audit:
     runs-on: ubuntu-latest
     needs: build
@@ -42,23 +51,37 @@ jobs:
       - name: Run cargo audit
         run: cargo audit
 
+  #
+  #
   docker-tests:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - uses: actions/checkout@v4
-      - name: Run Docker tests
+
+      - name: Build tests
         run: |
           cargo install cargo-nextest --locked
+          cargo test --no-run --features docker-tests
+
+      - name: Run Docker tests
+        run: |
           cargo nextest run -F docker-tests
 
+  #
+  #
   native-tests:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Build tests
+        run: |
+          cargo install cargo-nextest --locked
+          cargo test --no-run --features native-tests,high-memory-tests
 
       - name: Install Pixi
         run: |
