Add native specs for rosetta and score

--- a/assets/pixi/ligandmpnn.toml
+++ b/assets/pixi/ligandmpnn.toml
@@ -40,6 +40,6 @@ cmd = "bash get_model_params.sh './model_params'"
 
 
 [tasks.execute]
-xargs = ["args"]
+args = ["args"]
 cwd = "ligandmpnn-repo-clone"
 cmd = "python run.py {{args}}"
